--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -11,14 +11,17 @@ layout: default
       <!--<![endif]-->
     <h1 class="a11y-title">{{ site.title }}</h1>
 
-    <p class="a11y-subtitle">A community-driven effort to make web accessibility easier.</p>
+    <p class="a11y-subtitle">{{ site.description }}</p>
 
     <ul class="inline-list connect-with-a11y">
       <li>
-        <a class="btn" href="/about">Learn more</a>
+        <a class="btn" href="/about">Concocer más</a>
       </li>
       <li>
-        <a  class="btn"  href="http://github.com/a11yproject/a11yproject.com">Contribute on Github</a>
+        <a class="btn" href="/app_blindtex">Prueba BlindTex</a>
+      </li>
+      <li>
+        <a  class="btn"  href="{{site.github_project}}">Contribuir en Github</a>
       </li>
     </ul>
   </div>
