--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,29 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-translate-customization" content="2799b63e9872a422-144b0a71179bc4c5-gbc0bb0558eb2f07b-f">
-    <!-- twitter card -->
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@A11YProject">
-    <meta name="twitter:creator" content="@davatron5000">
-    {% if page.title %}
-      <meta name="twitter:title" content="{{ page.title }}">
-    {% else %}
-      <meta name="twitter:title" content="{{ site.title }}">
-    {% endif %}
-    {% if page.url %}
-      <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
-    {% endif %}
-    {% if page.description %}
-      <meta name="twitter:description" content="{{ page.description }}">
-    {% else %}
-      <meta name="twitter:description" content="{{ site.description }}">
-    {% endif %}
-    {% if page.thumbnail %}
-      <meta name="twitter:image:src" content="{{ site.url }}{{ page.thumbnail }}">
-    {% else %}
-      <meta name="twitter:image:src" content="{{ site.url }}{{ site.avatar }}">
-    {% endif %}
-    <!--// end twitter card -->
 
     <!-- open graph -->
     <meta content="{{ site.title }}" property="og:site_name">
@@ -107,14 +84,14 @@
               <svg class="icon-logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="-3627 353 1024 1024" style="enable-background:new -3627 353 1024 1024;" xml:space="preserve">
                 <path d="M-3116.4 353c-282 0-510.6 228.6-510.6 510.6s228.6 510.6 510.6 510.6s510.6-228.6 510.6-510.6S-2834.4 353-3116.4 353z M-3124.1 454.4c36.6 0 66.2 29.6 66.2 65.9c0 36.6-29.6 66.2-66.2 66.2c-36.3 0-65.9-29.6-65.9-66.2 C-3190.1 484-3160.5 454.4-3124.1 454.4L-3124.1 454.4z M-2838 667.7l-196.4 24.8l0.1 196.6l95.2 317.7c5 20.1-7 40.1-26.9 45.1 c-19.8 5-40.1-6-45.1-26l-97.5-289.2h-30l-89.7 295.2c-7.5 19.3-29 28.1-48.2 20.6c-19.1-7.4-30.7-29.1-23.2-48.4l82.4-311.8V692.5 l-181-24.6c-18.6-1.5-31.2-17.8-29.7-36.4c1.4-18.7 18.3-32.6 36.8-31.1l219.9 18.9h96.4l234.1-19.3c18.6-0.7 34.4 13.7 35 32.5 C-2805 651-2819.4 666.9-2838 667.7L-2838 667.7z"/>
               </svg>
-              <!--<![endif]-->The A11Y Project
+              <!--<![endif]-->{{site.title}}
               </a>
             </li>
-            <li><a href="/patterns">Patterns</a></li>
-            <li><a href="/checklist">Checklist</a></li>
-            <li><a href="/resources">Resources</a></li>
+            <li><a href="/project">Proyecto</a></li>
+            <li><a href="/app_blindtex">App BlindTex</a></li>
+            <!--<li><a href="/resources">Resources</a></li>
             <li><a href="/events">Events</a></li>
-            <li><a href="/follow">Follow</a></li>
+            <li><a href="/follow">Follow</a></li> -->
             <li><a href="/about">About</a></li>
           </ul>
       </nav>
@@ -127,26 +104,22 @@
     <footer role="contentinfo" class="section footer">
       <div class="row">
         <div class="join-us">
-          <h3 class="join-us-title">Join us on <a href="https://github.com/a11yproject/a11yproject.com">GitHub</a></h3>
+          <h3 class="join-us-title">Unete al equipo <a href="https://github.com/blindtex/blindtex">GitHub</a></h3>
           <ul class="join-us-buttons github-data inline-list">
-            <li><a class="join-us-btn" href="https://github.com/a11yproject/a11yproject.com/graphs/contributors"><span class="data contributors">&nbsp;</span>Contributors</a></li>
-            <li><a class="join-us-btn" href="https://github.com/a11yproject/a11yproject.com"><span class="data stars">&nbsp;</span>Stars</a></li>
-            <li><a class="join-us-btn" href="https://github.com/a11yproject/a11yproject.com/issues"><span class="data open-issues">&nbsp;</span>Open Issues</a></li>
+            <!-- <li><a class="join-us-btn" href="https://github.com/blindtex/blindtex/graphs/contributors"><span class="data contributors">&nbsp;</span>Contributors</a></li>
+            <li><a class="join-us-btn" href="https://github.com/blindtex/blindtex"><span class="data stars">&nbsp;</span>Stars</a></li>
+            <li><a class="join-us-btn" href="https://github.com/blindtex/blindtex/issues"><span class="data open-issues">&nbsp;</span>Open Issues</a></li> -->
           </ul>
 
-          <ul id="contributors-list" class="row"></ul>
+          <!-- <ul id="contributors-list" class="row"></ul> -->
           <ul class="pager contributors-pagination inline-list"></ul>
         </div>
 
         <div class="colophon">
 
-          <h5 class="screen-reader-text">Colophon</h5>
-          <p><a href="https://twitter.com/A11YProject">@A11YProject</a> | <a href="/atom.xml">Subscribe</a></p>
-          <div id="google_translate_element"></div>
+          <p class="notice">Encuentrar algún bug o quieres ayudar ?<a href="https://github.com/blindtex/blindtex">Por favor contribuye</a>.</p>
 
-          <p class="notice">Notice an issue or want to help? <a href="http://github.com/a11yproject/a11yproject.com">Please contribute</a>.</p>
-
-          <p>&copy; <span class="a11y-copyright"></span> The Accessibility Project<br />
+          <p>&copy; <span class="a11y-copyright"></span> BlindTex Project<br />
             Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a></p>
         </div>
       </div>
