Correción de errores ortográficos

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,7 +93,7 @@
             <li><a href="/events">Events</a></li>
             <li><a href="/follow">Follow</a></li> -->
             <li><a href="/about">Nosotros</a></li>
-            <li><a href="/contact">Contactenos</a></li>
+            <li><a href="/contact">Contáctenos</a></li>
           </ul>
       </nav>
     </header>
@@ -105,7 +105,7 @@
     <footer role="contentinfo" class="section footer">
       <div class="row">
         <div class="join-us">
-          <h3 class="join-us-title">Unete al equipo <a href="https://github.com/blindtex/blindtex">GitHub</a></h3>
+          <h3 class="join-us-title">Únete al equipo <a href="https://github.com/blindtex/blindtex">GitHub</a></h3>
           <ul class="join-us-buttons github-data inline-list">
             <!-- <li><a class="join-us-btn" href="https://github.com/blindtex/blindtex/graphs/contributors"><span class="data contributors">&nbsp;</span>Contributors</a></li>
             <li><a class="join-us-btn" href="https://github.com/blindtex/blindtex"><span class="data stars">&nbsp;</span>Stars</a></li>
@@ -118,7 +118,7 @@
 
         <div class="colophon">
 
-          <p class="notice">Enconstraste algún bug o quieres ayudar ?<a href="https://github.com/blindtex/blindtex">Por favor contribuye</a>.</p>
+          <p class="notice">Encontraste algún bug o quieres ayudar ?<a href="https://github.com/blindtex/blindtex">Por favor contribuye</a>.</p>
 
           <p>&copy; <span class="a11y-copyright"></span> BlindTex Project<br />
             Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a></p>
