--- a/_layouts/archives.html
+++ b/_layouts/archives.html
@@ -18,7 +18,7 @@ layout: default
         <a class="btn" href="/project">Conocer más</a>
       </li>
       <li>
-        <a class="btn" href="/app_blindtex">Prueba BlindTex</a>
+        <a class="btn" href="/app_blindtex">Prueba BlindTeX</a>
       </li>
       <li>
         <a  class="btn" target="_blank" href="{{site.github_project}}">Contribuir en Github</a>
