--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,7 @@
               </a>
             </li>
             <li><a href="/project">Proyecto</a></li>
-            <li><a href="/app_blindtex">App BlindTex</a></li>
+            <li><a href="/app_blindtex">App BlindTeX</a></li>
             <!--<li><a href="/resources">Resources</a></li>
             <li><a href="/events">Events</a></li>
             <li><a href="/follow">Follow</a></li> -->
@@ -118,9 +118,9 @@
 
         <div class="colophon">
 
-          <p class="notice">Encontraste algún bug o quieres ayudar ?<a href="https://github.com/blindtex/blindtex">Por favor contribuye</a>.</p>
+          <p class="notice">¿Encontraste algún bug o quieres ayudar?<a href="https://github.com/blindtex/blindtex">Por favor contribuye</a>.</p>
 
-          <p>&copy; <span class="a11y-copyright"></span> BlindTex Project<br />
+          <p>&copy; <span class="a11y-copyright"></span> BlindTeX Project<br />
             Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a></p>
         </div>
       </div>
