Ajustes para ejecutar la app de blindtex

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -88,7 +88,7 @@
               </a>
             </li>
             <li><a href="/project">Proyecto</a></li>
-            <li><a href="/app_blindtex">App BlindTeX</a></li>
+            <li><a href="/how_to">App BlindTeX</a></li>
             <!--<li><a href="/resources">Resources</a></li>
             <li><a href="/events">Events</a></li>
             <li><a href="/follow">Follow</a></li> -->
@@ -132,6 +132,8 @@
     <script src="/js/jquery.waypoints.min.js"></script>
 
     <script src="/js/scripts.js"></script>
+    <!-- Blindtex app code-->
+    <script src="/js/app.js"></script>
     <script>
     function googleTranslateElementInit() {
       new google.translate.TranslateElement({pageLanguage: 'es', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
